Add prestiges, fix many of the war crimes in OG code